<resources>
    <string name="app_name">Project</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>
    <string name="password">Password</string>
    <string name="loginTxt">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registerTxt">Register</string>
    <string name="name">Name</string>
    <string name="email_reg">Email</string>
    <string name="phone">Phone</string>
    <string name="password_reg">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">UserName</string>
    <string name="username_reg">UserName</string>
    <string name="volunteer">Volunteer</string>
    <string name="donor">Donor</string>
    <string name="choose_your_role">Choose your Role</string>
    <string name="choose_your_rolee">Choose your role</string>
    <string name="donorr">Donor</string>
    <string name="restuarantName" />
    <string name="restaurantName" />
    <string name="restaurantname">RestaurantName</string>
    <string name="donar_registration">Donar Registration</string>
    <string name="volunteer_registration" />
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="my_listings">My listings</string>
    <string name="account">Account</string>
    <string name="share">Share</string>
    <string name="users_near_me">Users near me</string>
    <string name="about_uss">About Us</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="log_out">Log Out</string>
    <string name="business">   Business</string>
    <string name="help_center">Help center</string>

    <string name="businesses">Businesses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_give_away_food">GiveAwayFood</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="save_account">Save Account</string>
    <string name="foodiefest">FoodieFest</string>
    <string name="title">Title</string>
    <string name="save">save</string>
</resources>