<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:background="@drawable/blue_bg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="230dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/loginTxt"
                android:textAlignment="center"
                android:textColor="#1566e0"
                android:textSize="30sp"
                android:textStyle="bold" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15sp"
                android:paddingBottom="15dp"
                android:textColor="#454545"
                android:textColorHint="#454545"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/email"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15sp"
                android:paddingBottom="15dp"
                android:textColor="#454545"
                android:textColorHint="#454545"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/password"/>

        </RelativeLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/don_t_have_an_account"
                android:textColor="#1566e0"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/registernow"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/register_now"
                android:textColor="#1566e0"
                android:textStyle="bold"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>