<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity_Donor">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/blue_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="210dp"

                    android:layout_height="50dp"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="#1566e0"
                    android:fontFamily="@font/poppins"
                    android:text="Volunteer Registration"
                    android:textStyle="bold"/>

            </FrameLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/username_reg"
                    android:textColorHint="#454545"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:textColor="#454545"
                    android:paddingTop="15sp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/iemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email_reg"
                    android:textColor="#454545"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#454545"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="15sp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="#454545"
                    android:textColorHint="#454545"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="15sp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/password_reg"
                    android:inputType="textPassword"
                    android:textColorHint="#454545"
                    android:textColor="#454545"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="15sp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/compass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#454545"
                    android:textColorHint="#454545"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="15sp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe"/>

            <Button
                android:id="@+id/registernow"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/already_have_an_account"
                    android:textColor="#1566e0"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/loginnow"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/login_now"
                    android:textColor="#1566e0"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>